Some more verbosity in CUDA compiling

--- a/analysis/temp.ipynb
+++ b/analysis/temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4106fdd4",
    "metadata": {},
    "outputs": [
@@ -11,111 +11,266 @@
      "output_type": "stream",
      "text": [
       "local\n",
-      "hi\n",
-      "Streams\tKernels/sec\tElapsed(s)\n",
-      "hi\n",
-      "Streams\tKernels/sec\tElapsed(s)\n",
-      "1\t18\t\t1.095\n",
-      "1\t18\t\t1.095\n",
-      "2\t56\t\t0.704\n",
-      "2\t56\t\t0.704\n",
-      "4\t71\t\t1.121\n",
-      "4\t71\t\t1.121\n",
-      "8\t105\t\t1.516\n",
-      "8\t105\t\t1.516\n",
-      "16\t146\t\t2.188\n",
-      "16\t146\t\t2.188\n",
-      "32\t106\t\t6.037\n",
-      "32\t106\t\t6.037\n"
+      "======================================================================\n",
+      "OVERLAP KERNEL ATTRIBUTES\n",
+      "======================================================================\n",
+      "  num_regs             = 122\n",
+      "  local_size_bytes     = 1824  # per-thread stack/local\n",
+      "  shared_size_bytes    = 0\n",
+      "  max_threads_per_block= 512\n",
+      "\n",
+      "======================================================================\n",
+      "DEVICE PROPERTIES\n",
+      "======================================================================\n",
+      "  name                       = NVIDIA GeForce RTX 4070 Ti\n",
+      "  multiprocessor_count       = 60\n",
+      "  maxThreadsPerBlock         = 1024\n",
+      "  maxThreadsPerSM            = 1536\n",
+      "  maxBlocksPerSM             = 24\n",
+      "  regsPerSM                  = 65536\n",
+      "  warpSize                   = 32\n",
+      "\n",
+      "======================================================================\n",
+      "OCCUPANCY ANALYSIS\n",
+      "======================================================================\n",
+      "\n",
+      "Per-thread resources:\n",
+      "  Registers: 122\n",
+      "  Local memory: 1824 bytes\n",
+      "\n",
+      "Threads/Block   Blocks/SM       Active Threads/SM    Limiting Factor\n",
+      "--------------------------------------------------------------------------------\n",
+      "20              24              480                  HW block limit\n",
+      "40              13              520                  registers\n",
+      "80              6               480                  registers\n",
+      "128             4               512                  registers\n",
+      "256             2               512                  registers\n",
+      "512             1               512                  registers\n",
+      "1024            0               0                    registers\n",
+      "\n",
+      "======================================================================\n",
+      "ACTUAL USAGE IN overlap_multi_ensemble\n",
+      "======================================================================\n",
+      "\n",
+      "Configuration: 5 trees/ensemble × 4 threads/tree = 20 threads/block\n",
+      "\n",
+      "Per-block resource usage:\n",
+      "  Registers: 2440 (3.7% of SM)\n",
+      "  Local memory: 36,480 bytes (35.6 KB)\n",
+      "\n",
+      "Occupancy limits:\n",
+      "  Blocks limited by registers: 26\n",
+      "  Blocks limited by threads: 76\n",
+      "  Blocks limited by HW: 24\n",
+      "  ACTUAL max blocks per SM: 24\n",
+      "  ACTUAL active threads per SM: 480\n",
+      "  Occupancy: 31.2%\n",
+      "\n",
+      "======================================================================\n",
+      "CONCLUSION\n",
+      "======================================================================\n",
+      "✓ GPU SHOULD support 24 concurrent blocks per SM\n",
+      "  This means 1440 blocks across all 60 SMs\n",
+      "  But your tests show only 1 block executing at a time...\n",
+      "  → The bottleneck is NOT resource constraints!\n",
+      "======================================================================\n",
+      "OVERLAP KERNEL ATTRIBUTES\n",
+      "======================================================================\n",
+      "  num_regs             = 122\n",
+      "  local_size_bytes     = 1824  # per-thread stack/local\n",
+      "  shared_size_bytes    = 0\n",
+      "  max_threads_per_block= 512\n",
+      "\n",
+      "======================================================================\n",
+      "DEVICE PROPERTIES\n",
+      "======================================================================\n",
+      "  name                       = NVIDIA GeForce RTX 4070 Ti\n",
+      "  multiprocessor_count       = 60\n",
+      "  maxThreadsPerBlock         = 1024\n",
+      "  maxThreadsPerSM            = 1536\n",
+      "  maxBlocksPerSM             = 24\n",
+      "  regsPerSM                  = 65536\n",
+      "  warpSize                   = 32\n",
+      "\n",
+      "======================================================================\n",
+      "OCCUPANCY ANALYSIS\n",
+      "======================================================================\n",
+      "\n",
+      "Per-thread resources:\n",
+      "  Registers: 122\n",
+      "  Local memory: 1824 bytes\n",
+      "\n",
+      "Threads/Block   Blocks/SM       Active Threads/SM    Limiting Factor\n",
+      "--------------------------------------------------------------------------------\n",
+      "20              24              480                  HW block limit\n",
+      "40              13              520                  registers\n",
+      "80              6               480                  registers\n",
+      "128             4               512                  registers\n",
+      "256             2               512                  registers\n",
+      "512             1               512                  registers\n",
+      "1024            0               0                    registers\n",
+      "\n",
+      "======================================================================\n",
+      "ACTUAL USAGE IN overlap_multi_ensemble\n",
+      "======================================================================\n",
+      "\n",
+      "Configuration: 5 trees/ensemble × 4 threads/tree = 20 threads/block\n",
+      "\n",
+      "Per-block resource usage:\n",
+      "  Registers: 2440 (3.7% of SM)\n",
+      "  Local memory: 36,480 bytes (35.6 KB)\n",
+      "\n",
+      "Occupancy limits:\n",
+      "  Blocks limited by registers: 26\n",
+      "  Blocks limited by threads: 76\n",
+      "  Blocks limited by HW: 24\n",
+      "  ACTUAL max blocks per SM: 24\n",
+      "  ACTUAL active threads per SM: 480\n",
+      "  Occupancy: 31.2%\n",
+      "\n",
+      "======================================================================\n",
+      "CONCLUSION\n",
+      "======================================================================\n",
+      "✓ GPU SHOULD support 24 concurrent blocks per SM\n",
+      "  This means 1440 blocks across all 60 SMs\n",
+      "  But your tests show only 1 block executing at a time...\n",
+      "  → The bottleneck is NOT resource constraints!\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "# tools/kernel_concurrency_test.py\n",
-    "# Usage: python3 tools/kernel_concurrency_test.py\n",
-    "# Make sure you run this in the Python environment that has CuPy and your repo available.\n",
-    "\n",
-    "import time\n",
-    "import math\n",
-    "import numpy as np\n",
-    "import cupy as cp\n",
     "import sys\n",
     "import os\n",
     "sys.path.insert(0, os.path.join(os.getcwd(), '../core'))\n",
+    "\n",
+    "import cupy as cp\n",
+    "from cupy.cuda import runtime\n",
     "import pack_cuda\n",
     "\n",
-    "def make_input(N):\n",
-    "    # small random poses in sensible range\n",
-    "    rng = np.random.RandomState(123)\n",
-    "    x = rng.uniform(-5.0, 5.0, size=N)\n",
-    "    y = rng.uniform(-5.0, 5.0, size=N)\n",
-    "    t = rng.uniform(-math.pi, math.pi, size=N)\n",
-    "    xyt = np.stack([x, y, t], axis=1).astype(np.float64)\n",
-    "    return xyt\n",
-    "\n",
-    "def run_trial(num_streams, iters_per_stream, xyt1_np, xyt2_np):\n",
-    "    pack_cuda._ensure_initialized()  # make sure module is initialized\n",
-    "    n1 = xyt1_np.shape[0]\n",
-    "    n2 = xyt2_np.shape[0]\n",
-    "    # Flatten 3xN row-major as kernel expects\n",
-    "    xyt1_3xN = cp.ascontiguousarray(cp.asarray(xyt1_np).T).ravel()\n",
-    "    xyt2_3xN = cp.ascontiguousarray(cp.asarray(xyt2_np).T).ravel()\n",
-    "\n",
-    "    # Grab raw kernel and device arrays from pack_cuda (uses private names)\n",
-    "    kernel = pack_cuda._overlap_list_total_kernel\n",
-    "    piece_xy = pack_cuda._piece_xy_d\n",
-    "    piece_nverts = pack_cuda._piece_nverts_d\n",
-    "    num_pieces = np.int32(pack_cuda._num_pieces)\n",
-    "\n",
-    "    # Precreate per-stream outputs\n",
-    "    streams = [cp.cuda.Stream(non_blocking=True) for _ in range(num_streams)]\n",
-    "    out_totals = [cp.zeros(1, dtype=cp.float64) for _ in range(num_streams)]\n",
-    "\n",
-    "    # Warmup single call per stream to get JIT/compilation out of the way\n",
-    "    for s_idx, stream in enumerate(streams):\n",
-    "        with stream:\n",
-    "            kernel(\n",
-    "                (1,), (n1,),\n",
-    "                (xyt1_3xN, np.int32(n1), xyt2_3xN, np.int32(n2), piece_xy, piece_nverts, num_pieces, out_totals[s_idx], cp.zeros(1)),\n",
-    "                stream=stream\n",
-    "            )\n",
-    "    # Ensure warmup finished\n",
-    "    for s in streams:\n",
-    "        s.synchronize()\n",
-    "\n",
-    "    # Timed run: launch iters_per_stream kernels on each stream (back-to-back)\n",
-    "    start = time.time()\n",
-    "    for k in range(iters_per_stream):\n",
-    "        for s_idx, stream in enumerate(streams):\n",
-    "            with stream:\n",
-    "                kernel(\n",
-    "                    (1,), (n1,),\n",
-    "                    (xyt1_3xN, np.int32(n1), xyt2_3xN, np.int32(n2), piece_xy, piece_nverts, num_pieces, out_totals[s_idx], cp.zeros(1)),\n",
-    "                    stream=stream\n",
-    "                )\n",
-    "    # Wait for all streams to finish\n",
-    "    for s in streams:\n",
-    "        s.synchronize()\n",
-    "    end = time.time()\n",
-    "\n",
-    "    elapsed = end - start\n",
-    "    total_kernels = num_streams * iters_per_stream\n",
-    "    kernels_per_sec = total_kernels / elapsed\n",
-    "    return kernels_per_sec, elapsed\n",
-    "\n",
-    "\n",
-    "# Parameters to tune\n",
-    "N = 1024                       # number of trees (threads per block)\n",
-    "iters = 20                    # iterations per stream\n",
-    "xyt = make_input(N)\n",
-    "\n",
+    "# Initialize pack_cuda to compile the kernel\n",
+    "pack_cuda.USE_FLOAT32 = False\n",
     "pack_cuda._ensure_initialized()\n",
-    "packs = [1,2, 4, 8, 16, 32]  # number of concurrent streams to test\n",
-    "print(\"Streams\\tKernels/sec\\tElapsed(s)\")\n",
-    "for s in packs:\n",
-    "    kps, t = run_trial(s, iters, xyt[:200], xyt[:200])\n",
-    "    print(f\"{s}\\t{int(kps)}\\t\\t{t:.3f}\")"
+    "\n",
+    "# Get the compiled kernel\n",
+    "kernel = pack_cuda._multi_overlap_list_total_kernel\n",
+    "\n",
+    "# 2. Inspect kernel attributes (per-thread stack/local memory, registers, etc.)\n",
+    "attrs = kernel.attributes  # dict\n",
+    "print(\"=\" * 70)\n",
+    "print(\"OVERLAP KERNEL ATTRIBUTES\")\n",
+    "print(\"=\" * 70)\n",
+    "print(f\"  num_regs             = {attrs.get('num_regs')}\")\n",
+    "print(f\"  local_size_bytes     = {attrs.get('local_size_bytes')}  # per-thread stack/local\")\n",
+    "print(f\"  shared_size_bytes    = {attrs.get('shared_size_bytes')}\")\n",
+    "print(f\"  max_threads_per_block= {attrs.get('max_threads_per_block')}\")\n",
+    "\n",
+    "# 3. Get device and device properties\n",
+    "dev = cp.cuda.Device()        # current device\n",
+    "dev_id = dev.id\n",
+    "props = runtime.getDeviceProperties(dev_id)\n",
+    "\n",
+    "name = props[\"name\"].decode(\"utf-8\", errors=\"ignore\")\n",
+    "multi_processor_count = props[\"multiProcessorCount\"]\n",
+    "max_threads_per_block = props[\"maxThreadsPerBlock\"]\n",
+    "warp_size = props[\"warpSize\"]\n",
+    "max_threads_per_sm = props.get(\"maxThreadsPerMultiProcessor\", 1536)\n",
+    "max_blocks_per_sm = props.get(\"maxBlocksPerMultiProcessor\", 24)\n",
+    "regs_per_sm = props.get(\"regsPerMultiprocessor\", 65536)\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"DEVICE PROPERTIES\")\n",
+    "print(\"=\" * 70)\n",
+    "print(f\"  name                       = {name}\")\n",
+    "print(f\"  multiprocessor_count       = {multi_processor_count}\")\n",
+    "print(f\"  maxThreadsPerBlock         = {max_threads_per_block}\")\n",
+    "print(f\"  maxThreadsPerSM            = {max_threads_per_sm}\")\n",
+    "print(f\"  maxBlocksPerSM             = {max_blocks_per_sm}\")\n",
+    "print(f\"  regsPerSM                  = {regs_per_sm}\")\n",
+    "print(f\"  warpSize                   = {warp_size}\")\n",
+    "\n",
+    "# 4. Occupancy analysis for various block sizes\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"OCCUPANCY ANALYSIS\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "num_regs = attrs.get('num_regs', 64)\n",
+    "local_mem = attrs.get('local_size_bytes', 1104)\n",
+    "\n",
+    "print(f\"\\nPer-thread resources:\")\n",
+    "print(f\"  Registers: {num_regs}\")\n",
+    "print(f\"  Local memory: {local_mem} bytes\")\n",
+    "\n",
+    "test_block_sizes = [20, 40, 80, 128, 256, 512, 1024]\n",
+    "\n",
+    "print(f\"\\n{'Threads/Block':<15} {'Blocks/SM':<15} {'Active Threads/SM':<20} {'Limiting Factor'}\")\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "for block_size in test_block_sizes:\n",
+    "    # Calculate limits\n",
+    "    regs_per_block = num_regs * block_size\n",
+    "    blocks_by_regs = regs_per_sm // regs_per_block if regs_per_block > 0 else 999\n",
+    "    blocks_by_threads = max_threads_per_sm // block_size\n",
+    "    blocks_by_hw = max_blocks_per_sm\n",
+    "    \n",
+    "    max_blocks = min(blocks_by_regs, blocks_by_threads, blocks_by_hw)\n",
+    "    active_threads = max_blocks * block_size\n",
+    "    \n",
+    "    # Determine limiting factor\n",
+    "    if max_blocks == blocks_by_regs:\n",
+    "        limiting = \"registers\"\n",
+    "    elif max_blocks == blocks_by_threads:\n",
+    "        limiting = \"thread count\"\n",
+    "    else:\n",
+    "        limiting = \"HW block limit\"\n",
+    "    \n",
+    "    print(f\"{block_size:<15} {max_blocks:<15} {active_threads:<20} {limiting}\")\n",
+    "\n",
+    "# 5. Test with actual kernel configuration from overlap_multi_ensemble\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"ACTUAL USAGE IN overlap_multi_ensemble\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# Typical usage: 5 trees per ensemble, 4 threads per tree = 20 threads\n",
+    "n_trees = 5\n",
+    "threads_per_block_actual = n_trees * 4\n",
+    "regs_per_block_actual = num_regs * threads_per_block_actual\n",
+    "local_mem_per_block = local_mem * threads_per_block_actual\n",
+    "\n",
+    "blocks_by_regs_actual = regs_per_sm // regs_per_block_actual\n",
+    "blocks_by_threads_actual = max_threads_per_sm // threads_per_block_actual\n",
+    "blocks_by_hw_actual = max_blocks_per_sm\n",
+    "\n",
+    "max_blocks_actual = min(blocks_by_regs_actual, blocks_by_threads_actual, blocks_by_hw_actual)\n",
+    "\n",
+    "print(f\"\\nConfiguration: {n_trees} trees/ensemble × 4 threads/tree = {threads_per_block_actual} threads/block\")\n",
+    "print(f\"\\nPer-block resource usage:\")\n",
+    "print(f\"  Registers: {regs_per_block_actual} ({100*regs_per_block_actual/regs_per_sm:.1f}% of SM)\")\n",
+    "print(f\"  Local memory: {local_mem_per_block:,} bytes ({local_mem_per_block/1024:.1f} KB)\")\n",
+    "print(f\"\\nOccupancy limits:\")\n",
+    "print(f\"  Blocks limited by registers: {blocks_by_regs_actual}\")\n",
+    "print(f\"  Blocks limited by threads: {blocks_by_threads_actual}\")\n",
+    "print(f\"  Blocks limited by HW: {blocks_by_hw_actual}\")\n",
+    "print(f\"  ACTUAL max blocks per SM: {max_blocks_actual}\")\n",
+    "print(f\"  ACTUAL active threads per SM: {max_blocks_actual * threads_per_block_actual}\")\n",
+    "print(f\"  Occupancy: {100 * (max_blocks_actual * threads_per_block_actual) / max_threads_per_sm:.1f}%\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"CONCLUSION\")\n",
+    "print(\"=\" * 70)\n",
+    "if max_blocks_actual >= 2:\n",
+    "    print(f\"✓ GPU SHOULD support {max_blocks_actual} concurrent blocks per SM\")\n",
+    "    print(f\"  This means {max_blocks_actual * multi_processor_count} blocks across all {multi_processor_count} SMs\")\n",
+    "    print(f\"  But your tests show only 1 block executing at a time...\")\n",
+    "    print(f\"  → The bottleneck is NOT resource constraints!\")\n",
+    "else:\n",
+    "    print(f\"✗ GPU can only run 1 block per SM due to resource limits\")\n",
+    "    print(f\"  Limited by: \", end=\"\")\n",
+    "    if max_blocks_actual == blocks_by_regs_actual:\n",
+    "        print(\"registers\")\n",
+    "    elif max_blocks_actual == blocks_by_threads_actual:\n",
+    "        print(\"thread count\")\n",
+    "    else:\n",
+    "        print(\"HW block limit\")"
    ]
   },
   {
