--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -32,31 +32,6 @@
       "[4.]\n",
       "[4.]\n",
       "back to 1e-4 later, also below\n",
-      "\n",
-      "Testing CostDummy\n",
-      "[0.]\n",
-      "[0.]\n",
-      "back to 1e-4 later, also below\n",
-      "[0.]\n",
-      "[0.]\n",
-      "back to 1e-4 later, also below\n",
-      "  Vectorized check for CostDummy\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing AreaCost\n",
-      "[0.25]\n",
-      "[0.25]\n",
-      "back to 1e-4 later, also below\n",
-      "[4.]\n",
-      "[4.]\n",
-      "back to 1e-4 later, also below\n",
-      "  Vectorized check for AreaCost\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing BoundaryDistanceCost\n",
-      "[6.89014151901359]\n",
-      "[6.89014151901359]\n",
-      "back to 1e-4 later, also below\n",
       "  Vectorized check for AreaCost\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
@@ -67,25 +42,35 @@
       "[0.16375189244210733]\n",
       "[0.1637518924421072]\n",
       "back to 1e-4 later, also below\n",
-      "[0.16375189244210733]\n",
-      "[0.1637518924421072]\n",
-      "back to 1e-4 later, also below\n",
       "  Vectorized check for BoundaryDistanceCost\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing BoundaryCost\n",
-      "  Vectorized check for BoundaryDistanceCost\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing BoundaryCost\n",
+      "=== Running NVCC Compilation (cubin for ptxas info) ===\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --ptxas-options=-v -arch=sm_89 -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_saved.cubin\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ptxas info    : 0 bytes gmem, 144 bytes cmem[3]\n",
+      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_boundary_list_total\n",
+      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 40 registers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
+      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_overlap_list_total\n",
+      "    1104 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 64 registers, 1104 bytes cumulative stack size, 404 bytes cmem[0], 24 bytes cmem[2]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[2.162812]\n",
       "[2.1628126218552532]\n",
-      "back to 1e-4 later, also below\n",
-      "[2.162812]\n",
-      "[2.1628126218552532]\n",
-      "back to 1e-4 later, also below\n",
-      "[0.13479447]\n",
-      "[0.13479456425163105]\n",
       "back to 1e-4 later, also below\n",
       "[0.13479447]\n",
       "[0.13479456425163105]\n",
@@ -97,25 +82,8 @@
       "[2.2351825]\n",
       "[2.2351832504299307]\n",
       "back to 1e-4 later, also below\n",
-      "  Vectorized check for BoundaryCost\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing CollisionCostOverlappingArea\n",
-      "[2.2351825]\n",
-      "[2.2351832504299307]\n",
-      "back to 1e-4 later, also below\n",
       "[1.7478586]\n",
       "[1.747858502905263]\n",
-      "back to 1e-4 later, also below\n",
-      "[1.7478586]\n",
-      "[1.747858502905263]\n",
-      "back to 1e-4 later, also below\n",
-      "  Vectorized check for CollisionCostOverlappingArea\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing CostCompound\n",
-      "[2.4128119945526123]\n",
-      "[2.4128126218552532]\n",
       "back to 1e-4 later, also below\n",
       "  Vectorized check for CollisionCostOverlappingArea\n",
       "  ✓ Vectorized results exactly match individual calls\n",
@@ -127,12 +95,6 @@
       "[4.134794473648071]\n",
       "[4.1347945642516315]\n",
       "back to 1e-4 later, also below\n",
-      "[4.134794473648071]\n",
-      "[4.1347945642516315]\n",
-      "back to 1e-4 later, also below\n",
-      "  Vectorized check for CostCompound\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "All tests passed.\n",
       "  Vectorized check for CostCompound\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "All tests passed.\n"
