Interface adjusment, still slow

--- a/analysis/test_concurrent_simple.ipynb
+++ b/analysis/test_concurrent_simple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4106fdd4",
    "metadata": {},
    "outputs": [
@@ -312,8 +312,8 @@
     "# Test parameters\n",
     "# For simple kernel: n_threads is threads per block\n",
     "# For overlap kernel: n_threads is trees per ensemble (kernel uses n_threads * 4 actual threads)\n",
-    "n_threads = 20  # Thread count per block (simple) or trees per ensemble (overlap)\n",
-    "work_factor = 1000000  # Work iterations per thread\n",
+    "n_threads = 200  # Thread count per block (simple) or trees per ensemble (overlap)\n",
+    "work_factor = 10000  # Work iterations per thread\n",
     "iters = 1\n",
     "\n",
     "# KERNEL TYPE FLAG: 'simple' or 'overlap'\n",
