--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -12,7 +12,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "local\n",
+      "=== Testing line_intersection ===\n",
+      "Testing 29 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 29 cases passed, max gradient error: 1.64e-08\n",
+      "\n",
+      "✓ All gradients match finite differences!\n",
+      "✓ line_intersection test PASSED\n",
+      "\n",
+      "=== Testing clip_against_edge ===\n",
+      "Testing 13 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All test cases passed, max gradient error: 7.32e-10\n",
+      "✓ clip_against_edge test PASSED\n",
+      "\n",
+      "=== Testing polygon_area ===\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
+      "✓ polygon_area test PASSED\n",
       "Testing cost computation and gradients\n",
       "\n",
       "Testing CostDummy\n",
@@ -36,33 +53,6 @@
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing BoundaryDistanceCost\n",
-      "=== Running NVCC Compilation (cubin for ptxas info) ===\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --ptxas-options=-v -arch=sm_89 -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_saved.cubin\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 33 registers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    1104 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 59 registers, 1104 bytes cumulative stack size, 396 bytes cmem[0], 24 bytes cmem[2]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "[6.8901396]\n",
       "[6.89014151901359]\n",
       "back to 1e-4 later, also below\n",
@@ -73,17 +63,13 @@
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing BoundaryDistanceCost\n",
-      "hi\n",
       "[6.890141597720094]\n",
       "[6.89014151901359]\n",
       "back to 1e-4 later, also below\n",
-      "hi\n",
       "[0.1637518787773246]\n",
       "[0.1637518924421072]\n",
       "back to 1e-4 later, also below\n",
       "  Vectorized check for BoundaryDistanceCost\n",
-      "hi\n",
-      "hi\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing BoundaryCost\n",
@@ -151,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
