--- a/analysis/benchmark.ipynb
+++ b/analysis/benchmark.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "6c9bf861-c4d7-492e-8c91-bc716358e29e",
    "metadata": {
     "tags": []
@@ -76,7 +76,7 @@
     "        xyt = np.random.default_rng(seed=self.seed).uniform(-0.5, 0.5, size=(self.n_ensembles, self.n_trees, 3))\n",
     "        xyt = xyt * [[[size_setup_scaled, size_setup_scaled, np.pi]]]\n",
     "        xyt = np.array(xyt, dtype=np.float32)\n",
-    "        h = np.array([[2*size_setup_scaled]*self.n_ensembles], dtype=np.float32).T\n",
+    "        h = np.array([[2*size_setup_scaled,0,0]]*self.n_ensembles, dtype=np.float32)\n",
     "        cost = pack_cost.CostCompound(costs=[pack_cost.AreaCost(scaling=0.),\n",
     "                                             pack_cost.BoundaryDistanceCost(scaling=self.scaling_boundary), \n",
     "                                             pack_cost.CollisionCostOverlappingArea(self.scaling_overlap)])\n",
@@ -95,6 +95,7 @@
     "            #display(fig)\n",
     "            #clear_output(wait=True)\n",
     "\n",
+    "        sol = kgs.SolutionCollection()\n",
     "        xyt = cp.array(xyt)\n",
     "        h = cp.array(h)\n",
     "\n",
@@ -114,7 +115,9 @@
     "                cost.costs[0].scaling = area_scaling\n",
     "            else:\n",
     "                cost.costs[0].scaling = 0.\n",
-    "            total_cost, total_grad, bound_grad = cost.compute_cost(xyt, h)\n",
+    "            sol.xyt = xyt\n",
+    "            sol.h = h\n",
+    "            total_cost, total_grad, bound_grad = cost.compute_cost(sol)\n",
     "            xyt -= dt * total_grad\n",
     "            h -= dt * bound_grad\n",
     "            t_total += dt\n",
@@ -136,36 +139,7 @@
     "                phase = 'final'\n",
     "                t_this_phase = 0.\n",
     "            elif phase == 'final' and t_this_phase >= self.duration_final:\n",
-    "                # Report out\n",
-    "                overlaps = pack_cost.CollisionCostOverlappingArea().compute_cost(xyt, h)[0]\n",
-    "                # Compute edge of smallest axis-aligned square containing all tree polygons for each ensemble\n",
-    "                for ei in range(self.n_ensembles):\n",
-    "                    tree_list_local = kgs.TreeList()\n",
-    "                    tree_list_local.xyt = cp.asnumpy(xyt[ei])\n",
-    "                    polygons = tree_list_local.get_trees()\n",
-    "                    # collect all vertex coordinates\n",
-    "                    xs = []\n",
-    "                    ys = []\n",
-    "                    for poly in polygons:\n",
-    "                        for vx, vy in poly.exterior.coords[:-1]:\n",
-    "                            xs.append(vx)\n",
-    "                            ys.append(vy)\n",
-    "                        # include interior rings if present\n",
-    "                        for interior in poly.interiors:\n",
-    "                            for vx, vy in interior.coords[:-1]:\n",
-    "                                xs.append(vx)\n",
-    "                                ys.append(vy)\n",
-    "                    min_x = min(xs) if xs else 0.0\n",
-    "                    max_x = max(xs) if xs else 0.0\n",
-    "                    min_y = min(ys) if ys else 0.0\n",
-    "                    max_y = max(ys) if ys else 0.0\n",
-    "                    edge = float(max(max_x - min_x, max_y - min_y))\n",
-    "                    self.sizes[ei, rounds_done] = edge\n",
-    "                    if overlaps[ei] > 0.0001*np.sqrt(self.n_trees):\n",
-    "                        self.sizes[ei, rounds_done] = np.nan\n",
-    "                    if self.sizes[ei, rounds_done] < self.best_size:\n",
-    "                        self.best_size = self.sizes[ei, rounds_done]\n",
-    "                        self.best_xyt = cp.asnumpy(xyt[ei]) \n",
+    "                \n",
     "\n",
     "                rounds_done += 1\n",
     "                if rounds_done >= self.n_rounds:\n",
@@ -183,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "cbd9d485",
    "metadata": {},
    "outputs": [
@@ -191,8 +165,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.45 s, sys: 1.31 s, total: 3.75 s\n",
-      "Wall time: 3.76 s\n"
+      "CPU times: user 5.93 s, sys: 372 ms, total: 6.3 s\n",
+      "Wall time: 5.96 s\n"
      ]
     }
    ],
@@ -207,6 +181,14 @@
     "base_runner.plot_interval = None\n",
     "base_runner.run_simulation()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f10cc48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
