--- a/analysis/benchmark.ipynb
+++ b/analysis/benchmark.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "6c9bf861-c4d7-492e-8c91-bc716358e29e",
    "metadata": {
     "tags": []
@@ -70,6 +70,7 @@
     "    best_size = np.inf\n",
     "    best_xyt = None\n",
     "\n",
+    "    #@kgs.profile_each_line\n",
     "    def run_simulation(self):\n",
     "        # Initial configuration\n",
     "        size_setup_scaled = self.size_setup * np.sqrt(self.n_trees)\n",
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "cbd9d485",
    "metadata": {},
    "outputs": [
@@ -165,13 +166,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.93 s, sys: 372 ms, total: 6.3 s\n",
-      "Wall time: 5.96 s\n"
+      "CPU times: user 4.19 s, sys: 464 ms, total: 4.65 s\n",
+      "Wall time: 4.72 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "kgs.profiling=True\n",
     "runner_list = []\n",
     "base_runner = MegaDynamics()\n",
     "base_runner.n_trees = 40\n",
