Pass by reference for pack_cost

--- a/analysis/benchmark.ipynb
+++ b/analysis/benchmark.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6c9bf861-c4d7-492e-8c91-bc716358e29e",
    "metadata": {
     "tags": []
@@ -99,6 +99,11 @@
     "        sol = kgs.SolutionCollection()\n",
     "        xyt = cp.array(xyt)\n",
     "        h = cp.array(h)\n",
+    "        \n",
+    "        # Preallocate gradient arrays\n",
+    "        total_cost = cp.zeros(self.n_ensembles, dtype=cp.float32)\n",
+    "        total_grad = cp.zeros_like(xyt)\n",
+    "        bound_grad = cp.zeros_like(h)\n",
     "\n",
     "        t_total = np.float32(0.)\n",
     "        dt = np.float32(self.dt)\n",
@@ -118,7 +123,7 @@
     "                cost.costs[0].scaling = 0.\n",
     "            sol.xyt = xyt\n",
     "            sol.h = h\n",
-    "            total_cost, total_grad, bound_grad = cost.compute_cost(sol)\n",
+    "            cost.compute_cost(sol, total_cost, total_grad, bound_grad)\n",
     "            xyt -= dt * total_grad\n",
     "            h -= dt * bound_grad\n",
     "            t_total += dt\n",
@@ -151,14 +156,12 @@
     "\n",
     "        # If a temporary plotting figure was created, close it to release resources\n",
     "        #if self.plot_interval is not None:\n",
-    "        #    plt.close(fig)\n",
-    "            \n",
-    "                                                       \n"
+    "        #    plt.close(fig)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "cbd9d485",
    "metadata": {},
    "outputs": [
@@ -166,8 +169,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.19 s, sys: 464 ms, total: 4.65 s\n",
-      "Wall time: 4.72 s\n"
+      "CPU times: user 4.23 s, sys: 550 ms, total: 4.79 s\n",
+      "Wall time: 4.86 s\n"
      ]
     }
    ],
