--- a/analysis/benchmark.ipynb
+++ b/analysis/benchmark.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "6c9bf861-c4d7-492e-8c91-bc716358e29e",
    "metadata": {
     "tags": []
@@ -81,6 +81,7 @@
     "        cost = pack_cost.CostCompound(costs=[pack_cost.AreaCost(scaling=0.),\n",
     "                                             pack_cost.BoundaryDistanceCost(scaling=self.scaling_boundary), \n",
     "                                             pack_cost.CollisionCostOverlappingArea(self.scaling_overlap)])\n",
+    "        #cost = pack_cost.CostCompound(costs=[pack_cost.AreaCost(scaling=0.)])\n",
     "        if not self.use_boundary_distance:\n",
     "            cost.costs[1] = pack_cost.BoundaryCost(scaling=self.scaling_boundary)\n",
     "\n",
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "cbd9d485",
    "metadata": {},
    "outputs": [
@@ -169,14 +170,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.23 s, sys: 550 ms, total: 4.79 s\n",
-      "Wall time: 4.86 s\n"
+      "CPU times: user 4.28 s, sys: 521 ms, total: 4.8 s\n",
+      "Wall time: 4.88 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "kgs.profiling=True\n",
+    "kgs.profiling=False\n",
+    "kgs.debugging_mode = 1\n",
     "runner_list = []\n",
     "base_runner = MegaDynamics()\n",
     "base_runner.n_trees = 40\n",
