--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -12,7 +12,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "local\n",
       "=== Testing line_intersection ===\n",
+      "=== Compiling CUDA Primitives Test Kernels ===\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
+      "Compilation successful!\n",
+      "Initialization complete!\n",
       "Testing 29 cases...\n",
       "✓ Forward results match with and without gradients\n",
       "✓ All 29 cases passed, max gradient error: 1.64e-08\n",
@@ -57,10 +62,10 @@
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing BoundaryDistanceCost\n",
-      "[9.044552284637236]\n",
+      "[9.044552]\n",
       "[9.044552304610644]\n",
       "back to 1e-4 later, also below\n",
-      "[0.2334740358811513]\n",
+      "[0.23347403]\n",
       "[0.23347403559004487]\n",
       "back to 1e-4 later, also below\n",
       "  Vectorized check for BoundaryDistanceCost\n",
@@ -68,39 +73,42 @@
       " [ 2.   -0.1  -0.15]]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
-      "Testing BoundaryDistanceCost\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/d//packing/temp/pack_cuda_saved.cu(1222): error: identifier \"grad_vx_max\" is undefined\n",
-      "              d_h->y = -grad_vx_max;\n",
-      "                        ^\n",
+      "Testing BoundaryDistanceCost\n",
+      "[45.222748]\n",
+      "[45.22276152305322]\n",
+      "back to 1e-4 later, also below\n",
+      "[1.1673696]\n",
+      "[1.1673701779502244]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
-      "/mnt/d//packing/temp/pack_cuda_saved.cu(1223): error: identifier \"grad_vy_max\" is undefined\n",
-      "              d_h->z = -grad_vy_max;\n",
-      "                        ^\n",
+      "Testing CollisionCostOverlappingArea\n",
+      "[2.2351825]\n",
+      "[2.2351832504299307]\n",
+      "back to 1e-4 later, also below\n",
+      "[1.7478586]\n",
+      "[1.747858502905263]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
-      "2 errors detected in the compilation of \"/mnt/d//packing/temp/pack_cuda_saved.cu\".\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "nvcc failed (exit 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_11539/2137839397.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mimportlib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mpack_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_all_tests\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/mnt/d/packing/code/core/pack_test.py\u001b[0m in \u001b[0;36mrun_all_tests\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrun_all_tests\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mpack_cuda_primitives_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_all_tests\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mtest_costs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"All tests passed.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/mnt/d/packing/code/core/pack_test.py\u001b[0m in \u001b[0;36mtest_costs\u001b[0;34m()\u001b[0m\n\u001b[1;32m     58\u001b[0m             \u001b[0msol_fast\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxyt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxyt_single\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m             \u001b[0msol_fast\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb_single\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m             \u001b[0mcost_fast\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_fast\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_bound_fast\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_cost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msol_fast\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m             \u001b[0;31m# Store all outputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/mnt/d/packing/code/core/pack_cost.py\u001b[0m in \u001b[0;36mcompute_cost\u001b[0;34m(self, sol)\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcompute_cost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msol\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mkgs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSolutionCollection\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0;31m# Subclass can implement faster version\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m         \u001b[0mcost\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgrad_xyt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgrad_bound\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_compute_cost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mcost\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mN_solutions\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mgrad_xyt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0msol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxyt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/mnt/d/packing/code/core/pack_cost.py\u001b[0m in \u001b[0;36m_compute_cost\u001b[0;34m(self, sol)\u001b[0m\n\u001b[1;32m    351\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_compute_cost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msol\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mkgs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSolutionCollection\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    352\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muse_kernel\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 353\u001b[0;31m             \u001b[0mcost\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgrad_h\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpack_cuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mboundary_distance_multi_ensemble\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxyt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompute_grad\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    354\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mcost\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgrad_h\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    355\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/mnt/d/packing/code/core/pack_cuda.py\u001b[0m in \u001b[0;36mboundary_distance_multi_ensemble\u001b[0;34m(xyt, h, compute_grad, stream)\u001b[0m\n\u001b[1;32m   1337\u001b[0m     \u001b[0mgrad_h\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mcp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshape\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn_ensembles\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptional\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1338\u001b[0m         \u001b[0mGradient\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mOnly\u001b[0m \u001b[0mreturned\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mcompute_grad\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1339\u001b[0;31m     \"\"\"\n\u001b[0m\u001b[1;32m   1340\u001b[0m     \u001b[0m_ensure_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1341\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/mnt/d/packing/code/core/pack_cuda.py\u001b[0m in \u001b[0;36m_ensure_initialized\u001b[0;34m()\u001b[0m\n\u001b[1;32m   1079\u001b[0m     \u001b[0mproc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1080\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1081\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mproc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreturncode\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1082\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"nvcc failed (exit {proc.returncode})\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1083\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: nvcc failed (exit 1)"
+      "Testing CostCompound\n",
+      "[13.941825]\n",
+      "[13.941828456915966]\n",
+      "back to 1e-4 later, also below\n",
+      "[6.3502107]\n",
+      "[6.350211053385067]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "All tests passed.\n"
      ]
     },
     {
@@ -136,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
