Initial implementation witih passing tests (float64)

--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -13,6 +13,7 @@
      "output_type": "stream",
      "text": [
       "local\n",
+      "Back to 64!\n",
       "=== Testing line_intersection ===\n",
       "=== Compiling CUDA Primitives Test Kernels ===\n",
       "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
@@ -49,6 +50,18 @@
       " [ 2.   -0.1  -0.15]]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
+      "Testing CollisionCostSeparation\n",
+      "[1.8600345702793302]\n",
+      "[1.8600345702793302]\n",
+      "back to 1e-4 later, also below\n",
+      "[1.5191920935442687]\n",
+      "[1.5191920935442687]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for CollisionCostSeparation\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
       "Testing AreaCost\n",
       "[0.5]\n",
       "[0.5]\n",
@@ -62,10 +75,10 @@
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing BoundaryDistanceCost\n",
-      "[9.044552]\n",
+      "[9.044552304610644]\n",
       "[9.044552304610644]\n",
       "back to 1e-4 later, also below\n",
-      "[0.23347403]\n",
+      "[0.23347403559004487]\n",
       "[0.23347403559004487]\n",
       "back to 1e-4 later, also below\n",
       "  Vectorized check for BoundaryDistanceCost\n",
@@ -74,10 +87,10 @@
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing BoundaryDistanceCost\n",
-      "[45.222748]\n",
+      "[45.22276152305322]\n",
       "[45.22276152305322]\n",
       "back to 1e-4 later, also below\n",
-      "[1.1673696]\n",
+      "[1.1673701779502246]\n",
       "[1.1673701779502244]\n",
       "back to 1e-4 later, also below\n",
       "  Vectorized check for BoundaryDistanceCost\n",
@@ -86,10 +99,10 @@
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing CollisionCostOverlappingArea\n",
-      "[2.2351825]\n",
+      "[2.2351832504299307]\n",
       "[2.2351832504299307]\n",
       "back to 1e-4 later, also below\n",
-      "[1.7478586]\n",
+      "[1.747858502905263]\n",
       "[1.747858502905263]\n",
       "back to 1e-4 later, also below\n",
       "  Vectorized check for CollisionCostOverlappingArea\n",
@@ -98,10 +111,10 @@
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing CostCompound\n",
-      "[13.941825]\n",
+      "[13.941828456915966]\n",
       "[13.941828456915966]\n",
       "back to 1e-4 later, also below\n",
-      "[6.3502107]\n",
+      "[6.350211053385067]\n",
       "[6.350211053385067]\n",
       "back to 1e-4 later, also below\n",
       "  Vectorized check for CostCompound\n",
