CUDA kernel for separation distance

--- a/analysis/benchmark.ipynb
+++ b/analysis/benchmark.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "52514ece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "local\n",
+      "local\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6c9bf861-c4d7-492e-8c91-bc716358e29e",
    "metadata": {
     "tags": []
@@ -153,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cbd9d485",
    "metadata": {},
    "outputs": [
@@ -161,8 +170,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.9 s, sys: 597 ms, total: 18.5 s\n",
-      "Wall time: 19.5 s\n"
+      "CPU times: user 2min 58s, sys: 620 ms, total: 2min 58s\n",
+      "Wall time: 2min 59s\n"
      ]
     }
    ],
